--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -80,7 +80,7 @@ jQuery(function() {
             <?php endif ?>
             <?php $_gender = $this->getLayout()->createBlock('customer/widget_gender') ?>
             <?php if ($_gender->isEnabled()): ?>
-                <li><?php echo $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></li>
+                <li id="gender"><?php echo $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></li>
             <?php endif ?>
             </ul>
         </div>
