--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -254,6 +254,8 @@ h1#about{
     margin:18px 0; 
 }
 
+#gender label{color:#3e2647;display:inline-block;}
+
 #brands{
    background:#3e2647;
    padding:25px 15px 25px;
