--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -254,7 +254,8 @@ h1#about{
     margin:18px 0; 
 }
 
-#gender label{color:#3e2647;display:inline-block;}
+#gender label{color:#684E70;display:inline-block;font-size:14px;}
+#gender select{float:left;}
 
 #brands{
    background:#3e2647;
