--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -254,7 +254,7 @@ h1#about{
     margin:18px 0; 
 }
 
-#gender label{color:#fff;float:left;font-size:14px;}
+#gender label{color:#ccc;float:left;font-size:14px;padding-left:15px;}
 #gender select{float:left;margin-left:15px;width:100px;}
 
 #brands{
