--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -254,8 +254,8 @@ h1#about{
     margin:18px 0; 
 }
 
-#gender label{color:#ccc;float:left;font-size:14px;padding-left:10px;}
-#gender select{float:left;margin-left:15px;width:100px;}
+#gender label{color:#ccc;float:left;font-size:14px;padding:4px 15px 0 10px;}
+#gender select{float:left;width:100px;}
 
 #brands{
    background:#3e2647;
