--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -122,16 +122,16 @@ if (!$categoryIds == null){
 					<h4>Share with your friends</h4>
 					
 					<!-- AddThis Button BEGIN -->
-					<div class="addthis_toolbox addthis_default_style" addthis:title="<?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>" addthis:description="Like my pick? Visit Rooja.com now and get access to top designer brands at upto 60% off retail. The website requires membership. Good news: membership is free. :)">
+					<div class="addthis_toolbox addthis_default_style" addthis:title="<?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>" addthis:description="Like my pick? visit Rooja.com. Find many more fashion items at up to 60% off retail. The website requires membership. Good news: membership is free. :) . P.S. Hurry!">
 					<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
-					<a class="addthis_button_twitter" tw:via="RoojaFashion"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
+					<a class="addthis_button_twitter" tw:via="RoojaFashion" tw:related="RoojaFashion"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
 					<a class="addthis_button_email"><img src="<?php echo $this->getSkinUrl('images/icons/email-24.png'); ?>" alt="facebook icon"></a>
 					</div>
 					<script type="text/javascript">
 						var addthis_config = {"data_track_clickback":true};
 						var addthis_share = { 
 						    templates: {
-						                   twitter: '<?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>  {{url}} via @RoojaFashion'
+						                   twitter: '<?php echo $currentcategory->getName(); ?> on Rooja.com. <?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?> {{url}} via @RoojaFashion'
 						               }
 						}
 					</script>
