--- a/app/design/frontend/default/rooja/template/rewards/customer.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/customer.phtml
@@ -45,7 +45,7 @@
 ?>
 
 <div class="mypoints-page">
-   <h1>My Points and Rewards</h1>
+   <h1>My Credits and Rewards</h1>
     
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php echo $this->getChildHtml('summary'); ?>  
