--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -70,10 +70,12 @@ P.S. Hurry!"/>
 <?php // ***** Detect CMS page ?>
 <?php if(Mage::getSingleton('cms/page')->getIdentifier() == 'home'  && Mage::app()->getFrontController()->getRequest()->getRouteName() == 'cms' ) : ?>
 <!--Home page OG Meta tags-->
-<meta property="og:title" content="Rooja | Luxury Designer Apparel and Accessories"/>
+<meta property="og:title" content="Join Rooja, a members only shopping club and luxury boutique."/>
 <meta property="og:type" content="product"/>
 <meta property="og:url" content="<?php echo $this->helper('core/url')->getCurrentUrl() ?>"/>
-<meta property="og:description" content="Apparel and accessories from leading International and Indian designers at prices you just can't get in the stores"/>
+<meta property="og:description" content="Thought of you guys when I saw this. Visit Rooja.com its got some good fashion picks from internationally known designers and brands at up to 60% off. You can thank me later, for now join the club. Membership is free ;) 
+
+P.S. Hurry!"/>
 <meta property="og:image" content="http://rooja.com/_images/rooja-logo-fb.png"/>
 <?php endif; ?>
 
