--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -36,7 +36,7 @@
 jQuery(function() {
 	
 	jQuery('input[type="text"], input[type="password"]').defaultValue({
-		preferPlaceholders: true
+		preferPlaceholder: true
 	});
 	
 	setTimeout(function() {
