--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
@@ -7,6 +7,7 @@
 		               <input class="invite-button" id="copyBtn" type="submit" title="send" value="Copy" />
 	
 						<div class="addthis_toolbox addthis_default_style" addthis:url="<?php echo $this->getReferralUrl(); ?>" addthis:title="Join Rooja, a members only shopping club and luxury boutique." addthis:description="Thought of you guys when I saw this. Visit Rooja.com its got some good fashion picks from internationally known designers and brands at up to 60% off. You can thank me later, for now join the club. Membership is free ;) P.S. Hurry!">
+							Share:
 						<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
 						<a class="addthis_button_twitter" tw:via="RoojaFashion" tw:related="RoojaFashion"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
 						</div>
