--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
@@ -10,6 +10,7 @@
 							<span class="fl" id="shareLabel">Share:</span>
 						<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
 						<a class="addthis_button_twitter" tw:via="RoojaFashion" tw:related="RoojaFashion"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
+						<fb:send href="<?php echo $this->getReferralUrl(); ?>" font="arial"></fb:send>
 						</div>
 						<script type="text/javascript">
 							var addthis_config = {"data_track_clickback":true};
