--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1368,7 +1368,7 @@ input.invite-button{height: 36px; color: #fff; font-size:14px; padding: 0px 10px
 
 #referred-friends-table {background:#fff; border:0px;}
 
-#shareLabel{font-size:12px;line-height:34px;}
+#shareLabel{font-size:12px;line-height:34px;margin-right:5px;}
 
 /********** Address Page */
 
