--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
@@ -17,3 +17,5 @@
 <?php echo $this->getChildHtml('history'); ?>
 
 </div>
+
+<?php echo Mage::app()->getFrontController()->getRequest()->getRouteName();?>
