--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,3 +1,4 @@
+<?php echo $current_page = Mage::app()->getFrontController()->getRequest()->getRouteName();echo $current_page;?>
 <div class="page-invite">
 	<fieldset>
 			<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
