--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -78,8 +78,14 @@ P.S. Hurry!"/>
 P.S. Hurry!"/>
 <meta property="og:image" content="http://rooja.com/_images/rooja-logo-fb.png"/>
 <?php endif; ?>
+<?php if(Mage::app()->getFrontController()->getRequest()->getRouteName() == 'customer' || Mage::app()->getFrontController()->getRequest()->getRouteName() == 'rewardsref') : ?>
+	<meta property="og:title" content="Join Rooja, a members only shopping club and luxury boutique."/>
+	<meta property="og:type" content="product"/>
+	<meta property="og:url" content="<?php echo $this->helper('core/url')->getCurrentUrl() ?>"/>
+	<meta property="og:description" content="Thought of you guys when I saw this. Visit Rooja.com its got some good fashion picks from internationally known designers and brands at up to 60% off. You can thank me later, for now join the club. Membership is free ;) 
 
-
+	P.S. Hurry!"/>
+<?php endif; ?>
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon" />
 <!--[if lt IE 9]>
