add points slider to chekr to checkout

--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -147,7 +147,7 @@ ul,ol         { list-style:none; }
 .clear {clear:both;}
 .right {float: right;}
 .left {float: left;}
-
+.none {display:none;}
 /* ======================================================================================= */
 
 
