--- a/app/design/frontend/default/rooja/template/rewards/checkout/cart/slider.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/cart/slider.phtml
@@ -10,7 +10,7 @@
 
 </script>
 
-<div class="slider" onmouseup="sliderNotSliding()">
+<div class="slider none" onmouseup="sliderNotSliding()">
     <table cellspacing="0" cellpadding="0">
         <tbody>
             <tr>
