--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1091,6 +1091,9 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .cvv-what-is-this { cursor:help; margin-left:5px; }
 #checkout-review-table{margin-top:15px;}
 
+
+#use_all_points {font-size:14px; display:inline; text-align:left;}
+
 #billing-new-address-form .form-list .field, #shipping-new-address-form .form-list .field{
     width:220px;
 }
