--- a/app/design/frontend/default/rooja/template/rewards/checkout/cartmini.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/cartmini.phtml
@@ -3,7 +3,7 @@ $cant_use_points = (($this->getMinSpendablePoints() == $this->getMaxSpendablePoi
 ?>
 
 <?php if($this->hasCartPointsData()): ?>
-<div class="discount-codes box rewards-box-spend-minicart discount" style="padding: 0 0 0 25px;">
+<div class="discount-codes box rewards-box-spend-minicart discount" style="padding: 0 0 25px 0;">
     <div class="rewards-box-spend-header">
         <h4 style="padding: 0;"><?php echo $this->__('Spend your points'); ?></h4>
     </div>
