--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -33,9 +33,11 @@
 <html xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/" xmlns="http://www.w3.org/1999/xhtml"  xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>" dir="ltr">
 <head>
 <?php echo $this->getChildHtml('lockdownhead') ?>
-
+<meta property="og:title" content="Join Rooja, a members only shopping club and luxury boutique."/>
 <meta property="og:image" content="http://rooja.com/_images/rooja-logo-fb.png"/>
+<meta property="og:description" content="Thought of you guys when I saw this. Visit Rooja.com its got some good fashion picks from internationally known designers and brands at up to 60% off. You can thank me later, for now join the club. Membership is free ;) 
 
+P.S. Hurry!"/>
 <script type="text/javascript">
   var _kmq = _kmq || [];
   function _kms(u){
