--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -35,7 +35,7 @@
 <script type="text/javascript">
 jQuery(function() {
 	
-	jQuery('input[type="text"], input[type="password"]').defaultValue({
+	/*jQuery('input[type="text"], input[type="password"]').defaultValue({
 		preferPlaceholder: true
 	});
 	
@@ -44,7 +44,7 @@ jQuery(function() {
 		// To prevent weird overlap with defaultValue and Chrome autofill,
 		// fire your own change event after 100 or so milliseconds
 		jQuery('input[type="text"]').change();
-	}, 100);
+	}, 100);*/
 	
 });
 </script>
