totals points alignment

--- a/app/design/frontend/base/default/template/rewards/checkout/rewardearned.phtml
+++ b/app/design/frontend/base/default/template/rewards/checkout/rewardearned.phtml
@@ -44,7 +44,7 @@
 ?>
 <?php if ($this->showEarnings()): ?>
     <tr>
-        <td class="a-right cart-points-total_earned" colspan="<?php echo $this->getColspan(); ?>"> 
+        <td colspan="1"> 
             <div class="caption"><?php echo $this->__('You Will Earn:') ?></div>
         </td>
         <td style="" class="a-right cart-points-total_earned"> 
