totals points alignment

--- a/app/design/frontend/default/rooja/template/rewards/checkout/rewarddiscount.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/rewarddiscount.phtml
@@ -43,7 +43,7 @@
  */
 ?>
 <tr>
-    <td style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right cart-points-total_item_discounts" colspan="<?php echo $this->getColspan(); ?>" id="item_discounts_td">
+    <td style="<?php echo $this->getTotal()->getStyle() ?>" class="cart-points-total_item_discounts" colspan="1" id="item_discounts_td">
         <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?>
             <span class="rendering_area">
             <?php endif; ?>
