--- a/app/design/frontend/default/rooja/template/rewards/checkout/rewardearned.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/rewardearned.phtml
@@ -44,8 +44,8 @@
 ?>
 <?php if ($this->showEarnings()): ?>
     <tr>
-        <td colspan="1"> 
-            <div class="caption"><?php echo $this->__('You Will Earn:') ?></div>
+        <td class="a-right cart-points-total_earned" colspan="1"> 
+            <div class="caption"><?php echo $this->__('You Will Earn') ?></div>
         </td>
         <td style="" class="a-right cart-points-total_earned"> 
             <span class="price">
