--- a/app/design/frontend/default/rooja/template/rewards/checkout/rewardspent.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/rewardspent.phtml
@@ -44,8 +44,8 @@
 ?>
 <?php if ($this->showSpendings()): ?>
     <tr>
-        <td colspan="1">          
-            <div class="caption"><?php echo $this->__('You Will Spend:') ?></div>
+        <td class="a-right" colspan="1">          
+            <div class="caption"><?php echo $this->__('You Will Spend') ?></div>
         </td>
         <td class="a-right cart-points-total_spent"> 
             <div class="points-amount">
