--- a/app/design/frontend/default/rooja/template/checkout/total/default.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/total/default.phtml
@@ -25,12 +25,12 @@
  */
 ?>
 <tr>
-    <th colspan="<?php echo $this->getColspan(); ?>" style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
+    <th colspan="4" style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
         <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?><strong><?php endif; ?>
             <?php echo $this->getTotal()->getTitle() ?>
         <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?></strong><?php endif; ?>
     </th>
-    <td style="<?php echo $this->getTotal()->getStyle() ?>" class="a-right">
+    <td style="4" class="a-right">
         <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?><strong><?php endif; ?>
             <?php echo $this->helper('checkout')->formatPrice($this->getTotal()->getValue()) ?>
         <?php if ($this->getRenderingArea() == $this->getTotal()->getArea()): ?></strong><?php endif; ?>
