--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -79,7 +79,7 @@ $categories = Mage::helper('catalog/category')->getStoreCategories();
 foreach ($categories as $_category){
     if($_category->hasChildren()){
         $_category->getId(); // category id
-		if($_category !=5){
+		if($_category->getId() !=5){
         foreach($_category->getChildren() as $subcategory){
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
             if($c->getIsActive()){ // check if category is active
