--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -38,7 +38,7 @@
 <?php endif;?>
 	<p>We have received your order and will email you with a confirmation when it ships.</p>
 
-	<p>If you have any questions or there is an error in your order, please <a class="contact" href="/contacts">Contact Us</a></p>
+	<p>If you have any questions or there is an error in your order, please <a class="contact" href="/contact">Contact Us</a></p>
 <?php if ($this->getCanViewOrder() && $this->getCanPrintOrder()) :?>
     <p>
         <?php echo $this->__('Click <a class="contact" href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
