--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -31,17 +31,7 @@
  * @see Mage_Review_Block_Product_View
  */
 ?>
-<script type="text/javascript"> 
-	window.fbAsyncInit = function() {
-	 FB.init({appId: '173637846031428', status: true, cookie: true, xfbml: true});
-	};
-	(function() {
-	 var e = document.createElement('script'); e.async = true;
-	 e.src = document.location.protocol +
-	   '//connect.facebook.net/en_US/all.js';
-	 document.getElementById('fb-root').appendChild(e);
-	}());
-</script>
+
 <script type="text/javascript" src="/magento.visual.attribute.js"></script>
 
 <script type="text/javascript">
@@ -305,7 +295,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 	<div class="container">
 		<section id="comments" class="col2 fl">
 			<h3>What people are saying...</h3>
-<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:comments href="<?php echo $currentUrl = $this->helper('core/url')->getCurrentUrl();?>" num_posts="2" width="460" colorscheme="dark"></fb:comments>
+<fb:comments href="<?php echo $currentUrl = $this->helper('core/url')->getCurrentUrl();?>" num_posts="2" width="460" colorscheme="dark"></fb:comments>
 		</section>
 		<section id="related" class="col2 fl noMargin">
 			<h3>Wear it With</h3>
