--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -42,6 +42,7 @@
 		<section class="col1 fl">
 		<h4>Information</h4>
 		<ul>
+			<li><a href="http://blog.rooja.com" target="_blank">Our Blog</a></li>
 			<li><a href="/about-us">About Us</a></li>
 			<li><a href="/faq">FAQ</a></li>
 			<li><a href="/press">Press</a></li>
