--- a/app/locale/en_US/template/email/password_new.html
+++ b/app/locale/en_US/template/email/password_new.html
@@ -22,7 +22,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 	</tr>
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<td style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-			   <h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Dear {{htmlescape var=$customer.name}},</h1>
+			   <h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;">Dear {{htmlescape var=$customer.name}},</h1>
                 <p style="font-size:12px; line-height:16px; margin:0 0 8px 0;"><strong>Your new password is:</strong> {{htmlescape var=$customer.password}}</p>
                 <p style="font-size:12px; line-height:16px; margin:0; color:#000;">You can change your password at any time by logging into <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">your account</a>.<p>
 	
@@ -31,7 +31,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<td colspan="2" id="footer" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 11px;color: #111;line-height: 18px;">
 			<img src="{{skin url="images/email/break.jpg" _area='frontend'}}" alt="" style="display: block;padding: 10px 10px 10px 0;">
-			If you have any questions about your account or any other matter, please feel free to contact us at support@rooja.com or by phone at (888) 298-9238.
+			If you have any questions about your account or any other matter, please feel free to contact us at support@rooja.com or by phone at {{config path='general/store_information/phone'}}.
 		</td>
 	</tr>
 </table>
