--- a/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
+++ b/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
@@ -28,7 +28,7 @@ Get access to internationally renowned designers and brands at prices you won't 
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<td colspan="2" id="footer" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 11px;color: #111;line-height: 18px;">
 			<img src="{{skin url="images/email/break.jpg" _area='frontend'}}" alt="" style="display: block;padding: 10px 10px 10px 0;">
-			If you have any questions about your account or any other matter, please feel free to contact us at support@rooja.com or by phone at (888) 298-9238.
+			If you have any questions about your account or any other matter, please feel free to contact us at support@rooja.com or by phone at {{config path='general/store_information/phone'}}.
 		</td>
 	</tr>
 </table>
