--- a/app/locale/en_US/template/email/newsletter_subscr_confirm.html
+++ b/app/locale/en_US/template/email/newsletter_subscr_confirm.html
@@ -24,7 +24,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
                 <!-- [ middle starts here] -->
                 <tr>
                     <td valign="top">
-                        <h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Thank you for subscribing to our newsletter.</h1>
+                        <h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;">Thank you for subscribing to our newsletter.</h1>
                         <p style="border:1px solid #E0E0E0; font-size:12px; line-height:16px; margin:0; padding:13px 18px; background:#F9F9F9;">To begin receiving the newsletter, you must first confirm your subscription by clicking on the following link:<br />
                         <a href="{{var subscriber.getConfirmationLink()}}" style="color:#1E7EC8;">{{var subscriber.getConfirmationLink()}}</a><p>
                     </td>
