--- a/app/locale/en_US/template/email/sales/invoice_new.html
+++ b/app/locale/en_US/template/email/sales/invoice_new.html
@@ -31,11 +31,11 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
         <!-- [ middle starts here] -->
             <tr>
                 <td valign="top">
-                    <h1 style="font-size:18px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Hello, {{htmlescape var=$order.getCustomerName()}}</h1>
+                    <h1 style="font-size:18px; font-weight:normal; line-height:22px; margin:0 0 11px 0;">Hello, {{htmlescape var=$order.getCustomerName()}}</h1>
                     <p style="font-size:12px; line-height:16px; margin:0;">
                         Thank you for your order from {{var store.getFrontendName()}}.
                         You can check the status of your order by <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">logging into your account</a>.
-                        If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#1E7EC8;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr">{{config path='general/store_information/phone'}}</span> Monday - Friday, 8am - 5pm PST.
+                        If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#1E7EC8;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr">{{config path='general/store_information/phone'}}</span>.
                     </p>
                 </td>
             </tr>
