--- a/app/locale/en_US/template/email/sales/order_new_guest.html
+++ b/app/locale/en_US/template/email/sales/order_new_guest.html
@@ -34,7 +34,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
                     <p style="font-size:12px; line-height:16px; margin:0 0 10px 0;">
                         Thank you for your order from {{var store.getFrontendName()}}.
                         Once your package ships we will send an email with a link to track your order.
-                        If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#1E7EC8;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr">{{config path='general/store_information/phone'}}</span> Monday - Friday, 8am - 5pm PST.
+                        If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#1E7EC8;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr">{{config path='general/store_information/phone'}}</span>.
                     </p>
                     <p style="font-size:12px; line-height:16px; margin:0;">Your order confirmation is below. Thank you again for your business.</p>
                 </td>
