--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -62,17 +62,30 @@ jQuery(function() {
 </header><!--End Header-->
 <section id="content" class="body">
 	<div id="loginCont">
-	  <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+	  
 	<h2 id="members" class="tr">Members Sign In</h2>
 	<a href="<?php echo $this->getForgotPasswordUrl() ?>" id="forgetPass">Forgot your password?</a>
 
-	<form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
-        <label for="email">Email Address</label>
-		<input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" placeholder="Email Address" />
-		<label for="pass">Password</label>
-		<input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?php echo $this->__('Password') ?>" placeholder="Password" />
-				<button id="fBConnect" rel="facebook-connect" type="button" title="<?php echo $this->__('Connect with Facebook') ?>" class="button"></button> 
-		<input type="submit" id="loginBtn" name="loginBtn" class="tr">
+	<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+    <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
+        <div class="col2-set">
+			<ul class="form-list">
+                <li>
+                    <label for="email" class="required">Email Address</label>
+                    <div class="input-box">
+                        <input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="Email Address" placeholder="Email Address" />
+                    </div>
+                </li>
+                <li>
+                    <label for="pass" class="required">Password</label>
+                    <div class="input-box">
+                        <input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="Password" placeholder="Password" />
+                    </div>
+                </li>
+            </ul>
+				<button id="fBConnect" rel="facebook-connect" type="button" title="<?php echo $this->__('Connect with Facebook') ?>" class="button"></button>
+				<button type="submit" class="button tr" title="<?php echo $this->__('Login') ?>" name="send" id="send2"><span><span><?php echo $this->__('Login') ?></span></span></button>
+	</div>
 	</form>
 	<br/>
 	<p>Having trouble? Email us at <a href="mailto:support@rooja.in">support@rooja.in</a></p>
