--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -31,6 +31,10 @@
  * @see Mage_Review_Block_Product_View
  */
 ?>
+<style type="text/css">
+	body {background: #ff0000;}
+</style>
+
 <script type="text/javascript"> 
 	window.fbAsyncInit = function() {
 	 FB.init({appId: '173637846031428', status: true, cookie: true, xfbml: true});
