--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -26,7 +26,7 @@ li.error-msg {
 }
 #loginCont .error-msg {margin-bottom:10px;}
 
-.register .error-msg{text-align:left;}
+.register .error-msg{text-align:left;padding-left:10px;}
 .register .error-msg li{margin-bottom:8px;}
 
 #notifyWrapper div.wrapper, #aboutWrapper div.wrapper{
