--- a/app/design/frontend/default/rooja/template/rewards/checkout/rewardearned.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/rewardearned.phtml
@@ -45,11 +45,11 @@
 <?php if ($this->showEarnings()): ?>
     <tr>
         <td class="a-right cart-points-total_earned" colspan="4"> 
-            <div class="caption"><?php echo $this->__('You Will Earn') ?></div>
+            <div class="caption"><?php //echo $this->__('You Will Earn') ?></div>
         </td>
         <td style="" class="a-right cart-points-total_earned"> 
             <span class="price">
-                <?php echo $this->getPointsEarned() ?>
+                <?php //echo $this->getPointsEarned() ?>
             </span>
         </td>
     </tr>
