--- a/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
@@ -32,6 +32,7 @@
 </header><!--End Header-->
 <section id="content" class="body">
         <h2 id="retrievePassword" class="tr"><?php echo $this->__('Retrieve your password here') ?></h2>
+<?php  echo $this->getMessagesBlock()->getGroupedHtml() ?>
         <p><?php echo $this->__('Enter your email below and we will send you a new password.') ?></p>
 <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
                     <input type="text" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
