--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -36,7 +36,7 @@
 <?php  else :?>
     <p><?php echo $this->__('Your order # is: %s.', $this->escapeHtml($this->getOrderId())) ?></p>
 <?php endif;?>
-	<p>We have received your order and will email you with a confirmation when it ships. You Earned <?php echo $this->getPointsEarned() ?> on this purchase</p>
+	<p>We have received your order and will email you with a confirmation when it ships. <!-- You Earned <?php //echo $this->getPointsEarned() ?> on this purchase</p> -->
 
 	<p>If you have any questions or there is an error in your order, please <a class="contact" href="/contact">Contact Us</a></p>
 
